# cms-admin

./: .dockerignore  Dockerfile  README.md  compose.yml  pyproject.toml  start.sh
.github/workflows/: dockerhub.yml
app/: router.py  settings.py  urls.py
cms/: admin.py  models.py  widgets.py
cms/static/cms/tagify/: init.js
