[project]
name = "app"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.1",
    "psycopg[binary,pool]>=3.2.1",
    "uvicorn>=0.30.6",
    "whitenoise>=6.7.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.4",
]

[tool.ruff]
line-length = 88
exclude = [
    ".venv",
    "migrations",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
combine-as-imports = true
